truffle/src/com.oracle.truffle.sl.test/src/tests/error/InvalidAssignmentInAssignment.sl
function main() {
  x = 42 = 42;
}